<resources>
    <string name="app_name">ASD Test</string>
    <string name="get_started">Get Started</string>
    <string name="intro_text">This test is designed to give a preliminary idea whether the person taking it is afflicted by Autism or Autistic Spectrum Disorders</string>
    <string name="age">Age</string>
    <string name="agree">Agree</string>
    <string name="disagree">Disagree</string>
    <string name="neutral">Neutral</string>
    <string name="q1">I often notice small sounds when others do not</string>
    <string name="q2">I usually concentrate more on the whole picture, rather than the small details</string>
    <string name="q3">I find it easy to do more than one thing at a time</string>
    <string name="q4">If there was an interruption, I can switch back to what I was doing very quickly</string>
    <string name="q5">I find it easy to read between the lines when someone is talking to me</string>
    <string name="q6">I know how to tell if someone listening to me is getting bored</string>
    <string name="q7">When I\'m reading a story I find it difficult to work out the characters\' intentions</string>
    <string name="q8">I like to collect information about categories of things (e.g. types of cars, birds, trains, plants etc)</string>
    <string name="q9">I find it easy to work out what someone is thinking or feeling just by looking at their face</string>
    <string name="q10">I find it difficult to work out people\'s intentions</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="input_age">Please input age of subject</string>
    <string name="subject_gender">Subject\'s gender</string>
    <string name="subject_ethnicity">Subject\'s ethnicity</string>
    <string name="subject_jaundice">Was the subject born with jaundice?</string>
    <string name="family_autism">Has anyone in the subject\'s immediate family been diagnosed with autism?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="subject_country">Country of residence</string>
    <string name="begin_test">Begin Test</string>
    <string name="submit">Submit</string>
    <string name="invalid_input_prompt">Please answer all the questions</string>
    <string name="subject_user">Who is taking this test on behalf of the subject?</string>
    <string name="please_wait">Please wait</string>
    <string name="debug_server_prompt">Set the URL for the server here</string>
    <string name="apply">Apply</string>
    <string name="used_app_before">Have you used this app to test the same subject before?</string>
    <string name="q_anxiety">Rate the subject\'s anxiety levels on a scale of 1–10 (where higher number indicates the subject has higher levels of anxiety)</string>
    <string name="q_hand_finger_mannerism">Subject is prone to making erratic movements with their fingers or hands</string>
    <string name="q_imagination">Subject has a highly active imagination and/or creative tendencies</string>
    <string name="q_echolalia">Subject exhibits the tendency to copy and repeat sounds and vocalizations made by others around them</string>
    <string name="q_social_overtures">Subject tends to make positive social overtures (e.g. starting a conversation or negotiation)</string>
    <string name="q_self_injurious_behavior">Subject has a tendency towards exhibiting self injurious behavior</string>
    <string name="q_shared_enjoyment">Subject gains shared enjoyment in interactions with others</string>
    <string name="q_tantrums">Subject tends to throw tantrums and exhibits aggression and disruptive behavior</string>
    <string name="q_eye_contact">Subject tends to make unusual (either too much or too little) eye contact</string>
    <string name="configuration">Configuration</string>
    <string name="personal_details">Personal Details</string>
    <string name="questionnaire">Questionnaire</string>
    <string name="autism_positive">Based on the results of the test, the subject exhibits signs of suffering from Autism.\n\nSee https://www.nhs.uk/conditions/autism/treatment for help dealing with such disorders.</string>
    <string name="autism_negative">No signs of autism detected as per this test. Would you like to test for Autistic Spectrum Disorders?</string>
    <string name="asd_positive">Based on the results of the test, the subject exhibits signs of suffering from Autistic Spectrum Disorders.\n\nSee https://www.nhs.uk/conditions/autism/treatment for help dealing with such disorders.</string>
    <string name="asd_negative">No signs of Autistic Spectrum Disorders detected as per this test.</string>
    <string name="exit">Exit</string>
    <string name="cont">Continue</string>

</resources>
